Forgot to add a new link to index

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,7 @@
                 <a rel="noopener" href="https://soundcloud.com/ilyaprokopenko" target="_blank" title="SoundCloud"><span class="fa fa-soundcloud fa-3x"></span></a>
                 <a rel="noopener" href="https://github.com/dsrev" target="_blank" title="GitHub"><span class="fa fa-github fa-3x"></span></a>
                 <a rel="noopener" href="https://codeberg.org/dsrev" target="_blank" title="Codeberg"><span class="fa fa-codeberg fa-3x"></span></a>
+                <a href="https://dsrev.me/contact" title="More"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
             <p><a rel="noopener" href="https://github.com/dsrev/dsrev.me" target="_blank">Source code</a> / <a href="/posts">Blog</a> / <a href="#" class="toggle-dark-mode">Dark/light mode</a></p>
         </div>
