--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
                 <a rel="noopener" href="https://www.youtube.com/channel/UCmtyukqkSLBNMyvF2JBO0JQ" target="_blank" title="YouTube"><span class="fa fa-youtube-play fa-3x"></span></a>
                 <a rel="noopener" href="https://t.me/dsrev" target="_blank" title="Telegram"><span class="fa fa-telegram fa-3x"></span></a>
                 <a rel="me noopener" href="https://mstdn.social/@dsrev" target="_blank" title="Mastodon"><span class="fa fa-mastodon fa-3x"></span></a>
+                <a rel="noopener" href="https://fedi.dsrev.me/@ilya" target="_blank" title="Fediverse (GoToSocial)"><span class="fa fa-activitypub fa-3x"></span></a>
                 <a rel="noopener" href="https://pixelfed.social/dsrev" target="_blank" title="Pixelfed"><span class="fa fa-pixelfed fa-3x"></span></a>
                 <a rel="noopener" href="https://soundcloud.com/ilyaprokopenko" target="_blank" title="SoundCloud"><span class="fa fa-soundcloud fa-3x"></span></a>
                 <a rel="noopener" href="https://github.com/dsrev" target="_blank" title="GitHub"><span class="fa fa-github fa-3x"></span></a>
